--- a/main.bib
+++ b/main.bib
@@ -64,3 +64,9 @@
     year = "2013",
     publisher = "Clifton Park, NY: Delmar/Cengage Learning",
 }
+@book{RLMBldng,
+    author = "Eric C. Orlemann",
+    title = "Building giant earthmovers",
+    year = "2000",
+    publisher = "Osceola, WI: MBI",
+}
