--- a/main.tex
+++ b/main.tex
@@ -5,17 +5,20 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
+
 \usepackage{verbatim}
 \usepackage{placeins}
 \usepackage{float}
 \restylefloat{figure}
 \restylefloat{table}
 
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
 
-\title{Troubleshooting and Diagnostic Analysis of Earth-mover Scraper -- CAT 637}
-\shorttitle{CAT 637G -- troubleshooting analysis }
-\author{
-Prepared for
+
+\title{Troubleshooting and Diagnostic Analysis of Earth-mover Scraper --- CAT 637}
+\shorttitle{CAT 637G --- troubleshooting analysis }
+\author{Prepared for
 
 Lisa Slywka, Instructor
 
@@ -23,8 +26,7 @@ English and Communications
 
 School of Applied Sciences and Technology
 }
-\affiliation{
-Prepared by
+\affiliation{Prepared by
 
 Tai Tran, 200222333
 
@@ -39,14 +41,28 @@ October 31, 2016
     
 \begin{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% To include a picture
-\begin{figure}[!ht]
-\centering
-\includegraphics[width=0.5\textwidth]{frog.jpg}
-\centering
-\caption{\label{fig:frog}This is a figure caption.}
-\end{figure}
-\FloatBarrier
+
+You can add inline TODO comments with the todonotes package, like this:
+\todo[inline, color=green!40]{This is an inline comment.}
+
+% refer to table %%%%%%%%%%%%%%%%%%%%%%%%%%%
+\ref{tab:widgets}
+
+% mathematics %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
+$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n} = \frac{1}{n}\sum_{i}^{n} X_i$$
+denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+
+% lists %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{enumerate}
+\item Like this,
+\item and like this.
+\end{enumerate}
+\dots or bullet points \dots
+\begin{itemize}
+\item Like this,
+\item and like this.
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{comment}
@@ -70,7 +86,7 @@ October 31, 2016
 
 \section{INTRODUCTION}
 
-\subsection{The significant of troubleshooting analysis}
+\subsection{The Significant of Troubleshooting Analysis}
 
 Cutting cost, reducing downtime, and extending lifespan of equipment are some business goals in the heavy equipment industry. In order to meet these targets, preventative maintenance can be the best practice; however, depending on environment and workload, equipment can fail at any time between service intervals. For this reason, technicians must equip themselves with appropriate troubleshooting skills.
 
@@ -82,63 +98,34 @@ Understanding how to solve hydraulic and powertrain problems benefits both equip
 
 As the paper has word limitation, the research will cover basic diagnostic instructions for common hydraulics and powertrain issues of CAT 637G. Typically, the focused areas of hydraulics are the cushion-hitch circuit and general hydraulic systems, while the focused area of powertrain is only the torque converter. Besides, this paper also includes some safety measures as a part of troubleshooting procedures.
 
-\section{Some \LaTeX{} Examples}
+\section{EQUIPMENT DESCRIPTION}
 \label{sec:examples}
 
-\subsection{Sections}
+\subsection{History Background}
+ 
+Back in 1922, Robert Gilmour Letourneau and his brother-in-law Ray Peterson built the first earthmoving scraper in Stockton, California \citep[p. 35]{RLMBldng}. After the first scraper was built by Letourneau in 1922, the author created a second version of earthmoving scraper, nicknamed the Gondola. Later, the third edition Mountain Mover was created in 1923. The Self-Propelled scraper was the fourth built. Letourneau continuously dedicated his life to improve his creations \citep{RLMBldng}.
 
-Use section and subsection commands to organize your document. \LaTeX{} handles all the formatting and numbering automatically. Use ref and label commands for cross-references.
-
-
-\subsection{Comments}
-
-You can add inline TODO comments with the todonotes package, like this:
-\todo[inline, color=green!40]{This is an inline comment.}
-
-\subsection{References}
-
-LaTeX automatically generates a bibliography in the APA style from your .bib file. The citep command generates a formatted citation in parentheses \cite{Lamport1986}. The cite command generates one without parentheses. LaTeX was first discovered by \cite{Lamport1986}.
-
-\subsection{Tables and Figures}
-
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. You can upload a figure (JPEG, PNG or PDF) using the files menu. To include it in your document, use the includegraphics command as in the code for Figure~\ref{fig:frog} below.
-
-% Commands to include a figure:
-\begin{table}[!htbp]
+\begin{figure}[!ht]
 \centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
-\FloatBarrier
+\includegraphics[width=0.5\textwidth]{mountain_mover_1922.png}
+\centering\caption{\label{fig:rthcr1}Mountain Mover with a telescoping bowl was invented in June, 1922. \citep{RLMBldng}}
+\end{figure}
 
+\subsection{Components}
 
-\subsection{Mathematics}
+\section{Diagnostics and Troubleshooting Analysis}
 
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i$$
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+\subsection{Hydraulic Systems}
 
-\subsection{Lists}
+\subsubsection{Cushion-hitch Hydraulic System}
 
-You can make lists with automatic numbering \dots
+\subsubsection{Auger Hydraulic System}
 
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
+\subsection{Powertrain}
 
-We hope you find write\LaTeX\ useful, and please let us know if you have any feedback using the help menu above.
+\subsubsection{Torque Converter}
 
+\section{CONCLUSION}
 
 \bibliography{main}
 
