--- a/flowchart1.tex
+++ b/flowchart1.tex
@@ -7,6 +7,35 @@
 \usetikzlibrary{shapes,arrows}
 
 
+\begin{comment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+You can add inline TODO comments with the todonotes package, like this:
+\todo[inline, color=green!40]{This is an inline comment.}
+
+% refer to table %%%%%%%%%%%%%%%%%%%%%%%%%%%
+\ref{tab:widgets}
+
+% mathematics %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
+$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n} = \frac{1}{n}\sum_{i}^{n} X_i$$
+denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+
+% lists %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{enumerate}
+\item Like this,
+\item and like this.
+\end{enumerate}
+\dots or bullet points \dots
+\begin{itemize}
+\item Like this,
+\item and like this.
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\end{comment}
+
+
 
 \begin{document}
 
