--- a/main.bib
+++ b/main.bib
@@ -36,6 +36,11 @@
     year = "2016",
     publisher="Edmonton, Canada: Queen’s printer"
 }
+@book{GOASspns,
+    title = "Government of Alberta [GOA]. Suspension system fundamentals and service (190302b) [Individual Learning Modules]",
+    year = "2016",
+    publisher="Edmonton, Canada: Queen’s printer"
+}
 @book{GOATorq,
     title = "Government of Alberta [GOA]. Torque Converter Fundamentals and Services (190303b) [Individual Learning Modules]",
     year = "2016",
@@ -69,4 +74,20 @@
     title = "Building giant earthmovers",
     year = "2000",
     publisher = "Osceola, WI: MBI",
+}
+@book{KthGnterth,
+    author = "Keith Haddock",
+    title = "Giant Earth Movers: An Illustrated History",
+    year = "1988",
+    publisher = "Osceola, WI: MBI",
+}
+@online{DTMTrmy,
+    title = "Earthmoving Operations",
+    year = "2000",
+    url = "http://www.google.ca/url?q=http://www.globalsecurity.org/military/library/policy/army/fm/5-434/fm5-434.pdf"
+}
+@online{hvyqpmtrg,
+    title = "637G wheel tractor-scraper with C-9 engine",
+    year = "2000",
+    url = "http://www.heavyequipments.org/blog/203-manual-cat-637g-wheel-tractor-scraper-components-systems-operation"
 }
