--- a/main.bib
+++ b/main.bib
@@ -36,8 +36,9 @@
     year = "2016",
     publisher="Edmonton, Canada: Queen’s printer"
 }
-@book{GOASspns,
-    title = "Government of Alberta [GOA]. Suspension system fundamentals and service (190302b) [Individual Learning Modules]",
+@misc{GOASspns,
+    author = "Government of Alberta [GOA]",
+    title = "Suspension system fundamentals and service (190302b) [Individual Learning Modules]",
     year = "2016",
     publisher="Edmonton, Canada: Queen’s printer"
 }
